--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,12 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_screenutil: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -24,9 +25,9 @@ dependencies:
   path_provider: #^1.4.0 #路径获取
   video_player: #^0.8.0 #视频播放
   event_bus: #^1.0.1 # 事件传递
-  flutter_staggered_grid_view: #^0.2.4 # 响应式瀑布流
   cached_network_image: ^2.2.0+1 #
   photo_view: #^0.10.2 # 图片预览
+  dio: ^3.0.10
 
 
 dev_dependencies:
