--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^2.3.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  # 不写版本号 默认最新版 建议插件都是用最新版
   cupertino_icons: #^0.1.2
-  image_picker:  #^0.6.7+6 #图片选择
-  path_provider: #^1.4.0 #路径获取
-  video_player: #^0.8.0 #视频播放
-  event_bus: #^1.0.1 # 事件传递
-  cached_network_image: ^2.2.0+1 #
-  photo_view: #^0.10.2 # 图片预览
   dio: ^3.0.10
+  shared_preferences: ^0.5.12
 
 
 dev_dependencies:
