--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^2.3.0
-  cupertino_icons: #^0.1.2
   dio: ^3.0.10
   shared_preferences: ^0.5.12
-
+  event_bus: ^1.1.0
+  url_launcher: ^5.4.5
 
 dev_dependencies:
   flutter_test:
