--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   shared_preferences: ^0.5.12
   event_bus: ^1.1.0
   url_launcher: ^5.4.5
+  dynamic_widget:
+    path: F:\refer\dynamic_widget
 
 dev_dependencies:
   flutter_test:
