--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -3,4 +3,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=file:///C:/Users/fei.he/.gradle/wrapper/dists/gradle-6.2.2-all.zip
+distributionUrl=file:///C:/Users/Administrator/.gradle/wrapper/dists/gradle-6.2.2-all.zip
