--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   event_bus: ^1.1.0
   url_launcher: ^5.4.5
   dynamic_widget:
-    path: F:\refer\dynamic_widget
+    path: D:\refer\dynamic_widget
 
 dev_dependencies:
   flutter_test:
